# SexyApp-Delta

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SexyAppFramework.sln
Demos/: CMakeLists.txt
Demos/Common/: Res.h
Demos/Common/Source/: Res.cpp
Demos/Demo1/: GameApp.cpp  main.cpp
Demos/Demo2/: GameApp.cpp  main.cpp
Demos/Demo3/: main.cpp
Demos/Demo4/: main.cpp
Demos/Demo5/: main.cpp
Demos/Hungarr/: OptionsDialog.cpp  main.cpp
Demos/V12Demo/: Board.cpp  main.cpp
Demos/XMLDemo/: Board.cpp  main.cpp
Include/SexyAppFramework/: AutoCrit.h  CheckboxListener.h  CursorWidget.h  D3DInterface.h  DDImage.h  DSoundManager.h  Debug.h  DescParser.h  EditListener.h  EditWidget.h  FModLoader.h  FlashWidget.h  Font.h  Graphics.h  ImageFont.h  ListWidget.h  NativeDisplay.h  OpenALSoundInstance.h  OpenALSoundManager.h  Point.h  Quantize.h  SWTri.h  SWTri_Pixel555.inc  SWTri_Pixel8888.inc  ScrollbarWidget.h  ScrollbuttonWidget.h  SexyAppBase.h  Slider.h  SliderListener.h  SysFont.h  WidgetContainer.h  WidgetManager.h  fmod.h
Include/SexyAppFramework/ImageLib/: ImageLib.h
Include/SexyAppFramework/PakLib/: PakInterface.h
SexyAppFramework/: CMakeLists.txt  SexyAppFramework.vcxproj  SexyAppFramework.vcxproj.filters
SexyAppFramework/Include/SexyAppFramework/: BassLoader.h  BassMusicInterface.h  Buffer.h  ButtonListener.h  ButtonWidget.h  Checkbox.h  Color.h  Common.h  CritSect.h  D3D8Helper.h  D3DTester.h  DDInterface.h  DSoundInstance.h  Dialog.h  DialogButton.h  DialogListener.h  DirectXErrorString.h  FModMusicInterface.h  Flags.h  HTTPTransfer.h  HyperlinkWidget.h  Image.h  Insets.h  KeyCodes.h  ListListener.h  MTRand.h  MemoryImage.h  ModVal.h  MusicInterface.h  PerfTimer.h  PropertiesParser.h  Ratio.h  Rect.h  ResourceManager.h  SEHCatcher.h  SWTri_Pixel888.inc  ScrollListener.h  SexyApp.h  SexyAppBase.h  SexyMatrix.h  (+9 more)
SexyAppFramework/Include/SexyAppFramework/ImageLib/: ImageLib.h
SexyAppFramework/Source/: BassLoader.cpp  BassMusicInterface.cpp  Buffer.cpp  Color.cpp  Common.cpp  CritSect.cpp  CursorWidget.cpp  D3D8Helper.cpp  D3DInterface.cpp  D3DTester.cpp  DDImage.cpp  DDInterface.cpp  DSoundInstance.cpp  DSoundManager.cpp  Debug.cpp  Dialog.cpp  EditWidget.cpp  FModLoader.cpp  FModMusicInterface.cpp  Flags.cpp  FlashWidget.cpp  Font.cpp  HTTPTransfer.cpp  Image.cpp  ImageFont.cpp  Insets.cpp  KeyCodes.cpp  ListWidget.cpp  MTRand.cpp  MemoryImage.cpp  ModVal.cpp  NativeDisplay.cpp  PerfTimer.cpp  Quantize.cpp  Ratio.cpp  SEHCatcher.cpp  SWTri_DrawTriangle.inc  SWTri_DrawTriangleInc1.inc  SWTri_Pixel565.inc  SWTri_Pixel8888.inc  (+10 more)
SexyAppFramework/Source/ImageLib/: ImageLib.cpp
SexyAppFramework/Source/PakLib/: PakInterface.cpp
Source/: BassMusicInterface.cpp  ButtonWidget.cpp  Checkbox.cpp  Common.cpp  D3DInterface.cpp  DSoundManager.cpp  DescParser.cpp  DialogButton.cpp  DirectXErrorString.cpp  Graphics.cpp  HyperlinkWidget.cpp  MusicInterface.cpp  OpenALSoundInstance.cpp  OpenALSoundManager.cpp  PerfTimer.cpp  PropertiesParser.cpp  ResourceManager.cpp  SEHCatcher.cpp  SWTri.cpp  ScrollbuttonWidget.cpp  SexyAppBase.cpp  SysFont.cpp  XMLParser.cpp
Source/ImageLib/: ImageLib.cpp
Source/PakLib/: PakInterface.cpp
Tools/: CMakeLists.txt
Tools/Include/: PakTool.h  SexyTools.h
Tools/Source/: PakTool.cpp  SexyTools.cpp  main.cpp
